@@ -1618,7 +1618,7 @@ MAIN_INTERFACE int read_config_file(char *name, int self)
 	}	/* #extension level program tva_level */
 	else if(strcmp(w[0], "level") == 0)
 	{
-	    if(words != 3)
+	    if(words < 3)
 	    {
 		ctl->cmsg(CMSG_ERROR, VERB_NORMAL, "%s: line %d: syntax error", name, line);
 		CHECKERRLIMIT;
@@ -1632,20 +1632,34 @@ MAIN_INTERFACE int read_config_file(char *name, int self)
 		CHECKERRLIMIT;
 		continue;
 	    }
-	    i = atoi(w[1]);
-	    if(i < 0 || i > 127)
-	    {
-		ctl->cmsg(CMSG_ERROR, VERB_NORMAL,
-			  "%s: line %d: extension level "
-			  "must be between 0 and 127", name, line);
-		CHECKERRLIMIT;
-		continue;
-	    }
-		bank->tone[i].tva_level = atoi(w[2]);
+		if (words == 3) {
+			i = atoi(w[1]);
+			if(i < 0 || i > 127)
+			{
+			ctl->cmsg(CMSG_ERROR, VERB_NORMAL,
+				  "%s: line %d: extension level "
+				  "must be between 0 and 127", name, line);
+			CHECKERRLIMIT;
+			continue;
+			}
+			bank->tone[i].tva_level = atoi(w[2]);
+		} else if(words == 4) {
+			if(atoi(w[3]) < 0 || atoi(w[3]) > 127)
+			{
+				ctl->cmsg(CMSG_ERROR, VERB_NORMAL,
+					  "%s: line %d: extension level "
+					  "must be between 0 and 127", name, line);
+				CHECKERRLIMIT;
+				continue;
+			}
+			for (i = atoi(w[1]); i < atoi(w[2]); i++) {
+				bank->tone[i].tva_level = atoi(w[3]);
+			}
+		}
 	}	/* #extension reverbsend */
 	else if(strcmp(w[0], "reverbsend") == 0)
 	{
-	    if(words != 3)
+	    if(words < 3)
 	    {
 		ctl->cmsg(CMSG_ERROR, VERB_NORMAL, "%s: line %d: syntax error", name, line);
 		CHECKERRLIMIT;
@@ -1659,20 +1673,34 @@ MAIN_INTERFACE int read_config_file(char *name, int self)
 		CHECKERRLIMIT;
 		continue;
 	    }
-	    i = atoi(w[1]);
-	    if(i < 0 || i > 127)
-	    {
-		ctl->cmsg(CMSG_ERROR, VERB_NORMAL,
-			  "%s: line %d: extension reverbsend "
-			  "must be between 0 and 127", name, line);
-		CHECKERRLIMIT;
-		continue;
-	    }
-		bank->tone[i].reverb_send = atoi(w[2]);
+		if (words == 3) {
+			i = atoi(w[1]);
+			if(i < 0 || i > 127)
+			{
+			ctl->cmsg(CMSG_ERROR, VERB_NORMAL,
+				  "%s: line %d: extension reverbsend "
+				  "must be between 0 and 127", name, line);
+			CHECKERRLIMIT;
+			continue;
+			}
+			bank->tone[i].reverb_send = atoi(w[2]);
+		} else if(words == 4) {
+			if(atoi(w[3]) < 0 || atoi(w[3]) > 127)
+			{
+				ctl->cmsg(CMSG_ERROR, VERB_NORMAL,
+					  "%s: line %d: extension reverbsend "
+					  "must be between 0 and 127", name, line);
+				CHECKERRLIMIT;
+				continue;
+			}
+			for (i = atoi(w[1]); i < atoi(w[2]); i++) {
+				bank->tone[i].reverb_send = atoi(w[3]);
+			}
+		}
 	}	/* #extension chorussend */
 	else if(strcmp(w[0], "chorussend") == 0)
 	{
-	    if(words != 3)
+	    if(words < 3)
 	    {
 		ctl->cmsg(CMSG_ERROR, VERB_NORMAL, "%s: line %d: syntax error", name, line);
 		CHECKERRLIMIT;
@@ -1686,20 +1714,34 @@ MAIN_INTERFACE int read_config_file(char *name, int self)
 		CHECKERRLIMIT;
 		continue;
 	    }
-	    i = atoi(w[1]);
-	    if(i < 0 || i > 127)
-	    {
-		ctl->cmsg(CMSG_ERROR, VERB_NORMAL,
-			  "%s: line %d: extension chorussend "
-			  "must be between 0 and 127", name, line);
-		CHECKERRLIMIT;
-		continue;
-	    }
-		bank->tone[i].chorus_send = atoi(w[2]);
+		if (words == 3) {
+			i = atoi(w[1]);
+			if(i < 0 || i > 127)
+			{
+			ctl->cmsg(CMSG_ERROR, VERB_NORMAL,
+				  "%s: line %d: extension chorussend "
+				  "must be between 0 and 127", name, line);
+			CHECKERRLIMIT;
+			continue;
+			}
+			bank->tone[i].chorus_send = atoi(w[2]);
+		} else if(words == 4) {
+			if(atoi(w[3]) < 0 || atoi(w[3]) > 127)
+			{
+				ctl->cmsg(CMSG_ERROR, VERB_NORMAL,
+					  "%s: line %d: extension chorussend "
+					  "must be between 0 and 127", name, line);
+				CHECKERRLIMIT;
+				continue;
+			}
+			for (i = atoi(w[1]); i < atoi(w[2]); i++) {
+				bank->tone[i].chorus_send = atoi(w[3]);
+			}
+		}
 	}	/* #extension delaysend */
 	else if(strcmp(w[0], "delaysend") == 0)
 	{
-	    if(words != 3)
+	    if(words < 3)
 	    {
 		ctl->cmsg(CMSG_ERROR, VERB_NORMAL, "%s: line %d: syntax error", name, line);
 		CHECKERRLIMIT;
@@ -1713,16 +1755,30 @@ MAIN_INTERFACE int read_config_file(char *name, int self)
 		CHECKERRLIMIT;
 		continue;
 	    }
-	    i = atoi(w[1]);
-	    if(i < 0 || i > 127)
-	    {
-		ctl->cmsg(CMSG_ERROR, VERB_NORMAL,
-			  "%s: line %d: extension delaysend "
-			  "must be between 0 and 127", name, line);
-		CHECKERRLIMIT;
-		continue;
-	    }
-		bank->tone[i].delay_send = atoi(w[2]);
+		if (words == 3) {
+			i = atoi(w[1]);
+			if(i < 0 || i > 127)
+			{
+			ctl->cmsg(CMSG_ERROR, VERB_NORMAL,
+				  "%s: line %d: extension delaysend "
+				  "must be between 0 and 127", name, line);
+			CHECKERRLIMIT;
+			continue;
+			}
+			bank->tone[i].delay_send = atoi(w[2]);
+		} else if(words == 4) {
+			if(atoi(w[3]) < 0 || atoi(w[3]) > 127)
+			{
+				ctl->cmsg(CMSG_ERROR, VERB_NORMAL,
+					  "%s: line %d: extension delaysend "
+					  "must be between 0 and 127", name, line);
+				CHECKERRLIMIT;
+				continue;
+			}
+			for (i = atoi(w[1]); i < atoi(w[2]); i++) {
+				bank->tone[i].delay_send = atoi(w[3]);
+			}
+		}
 	}	/* #extension playnote */
 	else if(strcmp(w[0], "playnote") == 0)
 	{
@@ -1752,15 +1808,15 @@ MAIN_INTERFACE int read_config_file(char *name, int self)
 			}
 			bank->tone[i].play_note = atoi(w[2]);
 		} else if(words == 4) {
-			for (i = atoi(w[1]); i < atoi(w[2]); i++) {
-				if(i < 0 || i > 127)
-				{
+			if(atoi(w[3]) < 0 || atoi(w[3]) > 127)
+			{
 				ctl->cmsg(CMSG_ERROR, VERB_NORMAL,
 					  "%s: line %d: extension playnote "
 					  "must be between 0 and 127", name, line);
 				CHECKERRLIMIT;
 				continue;
-				}
+			}
+			for (i = atoi(w[1]); i < atoi(w[2]); i++) {
 				bank->tone[i].play_note = atoi(w[3]);
 			}
 		}
