@@ -2,6 +2,7 @@
 
 	* timidity/timidity.c, timidity/playmidi.c, timidity/instrum.h:
 	  Support for #extension reverbsend, chorussend, delaysend.
+	  Fix SF2 scale tuning.
 
 2004-01-10  Saito <saito2@digitalme.com>
 
